--- a/MYMEALS2/Base.lproj/Main.storyboard
+++ b/MYMEALS2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eBF-eK-86d">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="SdA-LV-D28">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -266,18 +266,18 @@
                         <viewControllerLayoutGuide type="bottom" id="vq7-zR-bRk"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="MrK-51-mxe">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5Gp-uh-rk6">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="nb5-hm-fUo" customClass="FoodItemCell" customModule="MYMEALS2" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nb5-hm-fUo" id="pXb-kB-Yzb">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -292,6 +292,7 @@
                             <constraint firstItem="5Gp-uh-rk6" firstAttribute="leading" secondItem="MrK-51-mxe" secondAttribute="leading" id="zzM-Pp-VwE"/>
                         </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="dataProvider" destination="Irj-eF-yaO" id="cWD-Xv-Hxx"/>
                         <outlet property="tableView" destination="5Gp-uh-rk6" id="ilk-XO-be5"/>
@@ -300,7 +301,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ggd-b0-diO" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <customObject id="Irj-eF-yaO" customClass="FoodItemDataProvider" customModule="MYMEALS2" customModuleProvider="target"/>
             </objects>
-            <point key="canvasLocation" x="-687" y="325"/>
+            <point key="canvasLocation" x="-824" y="307"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="fzP-0t-nWN">
@@ -559,6 +560,49 @@
             </objects>
             <point key="canvasLocation" x="-70" y="1138"/>
         </scene>
+        <!--Food Item View Controller2-->
+        <scene sceneID="U9V-eS-Hdb">
+            <objects>
+                <viewController storyboardIdentifier="FoodItemViewController2" id="SdA-LV-D28" customClass="FoodItemViewController2" customModule="MYMEALS2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Lfm-gb-IUa"/>
+                        <viewControllerLayoutGuide type="bottom" id="Se7-ud-GeE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fNW-tU-PJJ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="E4c-3J-SEH">
+                                <rect key="frame" x="-4" y="0.0" width="328" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="E4c-3J-SEH" firstAttribute="leading" secondItem="fNW-tU-PJJ" secondAttribute="leadingMargin" constant="-20" id="31f-yU-do3"/>
+                            <constraint firstItem="Se7-ud-GeE" firstAttribute="top" secondItem="E4c-3J-SEH" secondAttribute="bottom" id="4ns-VE-gaf"/>
+                            <constraint firstItem="E4c-3J-SEH" firstAttribute="top" secondItem="fNW-tU-PJJ" secondAttribute="topMargin" id="ATd-gQ-80j"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="E4c-3J-SEH" secondAttribute="trailing" constant="-20" id="BJC-Ew-HCt"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="3sz-os-DEm">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="y4o-9c-KBY">
+                            <connections>
+                                <action selector="addFoodItem:" destination="SdA-LV-D28" id="bn9-ty-LPB"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="dataProvider" destination="hMi-58-252" id="FeO-gF-zVa"/>
+                        <outlet property="tableView" destination="E4c-3J-SEH" id="ly8-ob-1wT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="P9f-lv-tb1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="hMi-58-252" customClass="FoodItemDataProvider" customModule="MYMEALS2" customModuleProvider="target"/>
+            </objects>
+            <point key="canvasLocation" x="-366" y="307"/>
+        </scene>
         <!--Add Amount View Controller-->
         <scene sceneID="XX9-bc-1nm">
             <objects>
@@ -793,7 +837,26 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Njp-ch-IQ1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-343" y="307"/>
+            <point key="canvasLocation" x="797" y="337"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="h5r-zi-5vK">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Bje-Vr-Ktf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vrf-nM-ih8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="SdA-LV-D28" kind="relationship" relationship="rootViewController" id="TJk-mI-2QK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bey-4x-Lw9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="355" y="-367"/>
         </scene>
     </scenes>
 </document>
